--- a/landing_page/src/Nav.css
+++ b/landing_page/src/Nav.css
@@ -11,6 +11,12 @@
   align-items: center;
 }
 
+.right-side {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .social-icons a {
   margin: 0 5px;
   color: black;
@@ -19,11 +25,12 @@
 }
 
 .wechat-btn {
-  background-color: #b12d2d;
+  background-color: var(--main-red-color);
   color: white;
   border: none;
   padding: 5px 10px;
   border-radius: 5px;
+  margin: 0 15px;
 }
 
 .search-lang {
@@ -47,7 +54,7 @@
 
 .search-icon {
   margin-left: 5px;
-  color: black;
+  color: var(--main-red-color);
   cursor: pointer;
 }
 
@@ -98,7 +105,7 @@
 }
 
 .contact-btn {
-  background-color: #b12d2d;
+  background-color: var(--main-red-color);
   color: white;
   border: none;
   padding: 10px 15px;
