--- a/landing_page/src/RedButton.css
+++ b/landing_page/src/RedButton.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .learn-more-button {
-  background-color: #9f221f;
+  background-color: var(--main-red-color);
   border: none;
   color: white;
   text-align: center;
