--- a/landing_page/src/home/BusinessForm.css
+++ b/landing_page/src/home/BusinessForm.css
@@ -6,15 +6,15 @@ label {
 
 .form-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
   background-color: rgba(125, 129, 138, 0.55);
   border-radius: 1px;
-  width: 40%;
-  height: 35%;
+  width: 50%;
+  height: 45%;
   margin: 0 2rem;
-  padding: 0 .5rem;
+  padding: .5rem .5rem;
   color: #7d818a;
 }
 
@@ -28,7 +28,6 @@ label {
   justify-content: start;
   width: 100%;
   gap: .7rem;
-  width: 100%;
 }
 
 .first-row > * {
@@ -53,8 +52,8 @@ label {
 }
 
 #message {
-  height: 7rem;
-  padding-bottom: 5rem;
+  height: 60%;
+  padding-bottom: 16rem;
 }
 
 .form-container button {
