--- a/landing_page/src/home/ImmigrationInsights.css
+++ b/landing_page/src/home/ImmigrationInsights.css
@@ -34,3 +34,7 @@
 .business-immigration h2 {
   color: #2D374B;
 }
+.business-immigration img {
+  width: 100%;
+  height: 100;
+}
